Remove unimported `dist.` from tensor shapes tutorial
At the top of the notebook, `Normal` is already imported as
```
from pyro.distributions import Bernoulli, Categorical, MultivariateNormal, Normal
```
, so it's OK to just write `Normal`, rather than `dist.Normal` (especially as `dist` hasn't been imported).

As an aside, thanks for your phenomenal tutorials, they're really well-written and educational!

--- a/tutorial/source/tensor_shapes.ipynb
+++ b/tutorial/source/tensor_shapes.ipynb
@@ -205,13 +205,13 @@
     "\n",
     "Often in Pyro we'll declare some dimensions as dependent even though they are in fact independent, e.g.\n",
     "```py\n",
-    "x = pyro.sample(\"x\", dist.Normal(0, 1).expand([10]).to_event(1))\n",
+    "x = pyro.sample(\"x\", Normal(0, 1).expand([10]).to_event(1))\n",
     "assert x.shape == (10,)\n",
     "```\n",
     "This is useful for two reasons: First it allows us to easily swap in a `MultivariateNormal` distribution later. Second it simplifies the code a bit since we don't need a `plate` (see below) as in\n",
     "```py\n",
     "with pyro.plate(\"x_plate\", 10):\n",
-    "    x = pyro.sample(\"x\", dist.Normal(0, 1))  # .expand([10]) is automatic\n",
+    "    x = pyro.sample(\"x\", Normal(0, 1))  # .expand([10]) is automatic\n",
     "    assert x.shape == (10,)\n",
     "```\n",
     "The difference between these two versions is that the second version with `plate` informs Pyro that it can make use of conditional independence information when estimating gradients, whereas in the first version Pyro must assume they are dependent (even though the normals are in fact conditionally independent). This is analogous to d-separation in graphical models: it is always safe to add edges and assume variables *may* be dependent (i.e. to widen the model class), but it is unsafe to assume independence when variables are actually dependent (i.e. narrowing the model class so the true model lies outside of the class, as in mean field). In practice Pyro's SVI inference algorithm uses reparameterized gradient estimators for `Normal` distributions so both gradient estimators have the same performance."
