fix dpmm tutorial and update make scrub

--- a/tutorial/source/bayesian_regression.ipynb
+++ b/tutorial/source/bayesian_regression.ipynb
@@ -867,9 +867,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Environment (conda_pytorch-36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch-36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -881,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
