--- a/tutorial/source/elections.ipynb
+++ b/tutorial/source/elections.ipynb
@@ -16,13 +16,11 @@
     "$$ \\alpha_i = \\text{logit }\\mathbb{P}(\\text{a random voter in state } i \\text{ votes Democrat in the 2016 election}) $$\n",
     "\n",
     "and we assume all other voters vote Republican. Right before the election, the value of $\\alpha$ is unknown and we wish to estimate it by conducting a poll with $n_i$ people in state $i$ for $i=1, ..., 51$ . The winner $w$ of the election is decided by the Electoral College system. The number of electoral college votes gained by the Democrats in state $i$ is\n",
-    "$$",
-    "e_i =  \\begin{cases}\n",
+    "$$e_i =  \\begin{cases}\n",
     "k_i \\text{ if } \\alpha_i > \\frac{1}{2} \\\\\n",
     "0 \\text{ otherwise}\n",
     "\\end{cases}\n",
-    "$$",
-    "(this is a rough approximation of the true system). All other electoral college votes go to the Republicans. Here $k_i$ is the number of electoral college votes alloted to state $i$, which are listed in the following data frame."
+    "$$(this is a rough approximation of the true system). All other electoral college votes go to the Republicans. Here $k_i$ is the number of electoral college votes alloted to state $i$, which are listed in the following data frame."
    ]
   },
   {
@@ -729,9 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -803,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
