all code in intro_i works

--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `pyro.contrib.funsor`: a new backend for Pyro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary\n"
+    "# `pyro.contrib.funsor`: a new backend for Pyro (pt. 1)"
    ]
   },
   {
@@ -40,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +41,7 @@
     "\n",
     "import torch\n",
     "import funsor\n",
-    "\n",
     "from pyro import set_rng_seed as pyro_set_rng_seed\n",
-    "from pyro.ops.indexing import Vindex\n",
-    "from pyro.poutine.messenger import Messenger\n",
     "\n",
     "funsor.set_backend(\"torch\")\n",
     "torch.set_default_dtype(torch.float32)\n",
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +67,14 @@
     "from pyroapi import distributions as dist\n",
     "\n",
     "# this is already done in pyro.contrib.funsor, but we repeat it here\n",
-    "pyroapi.register_backend(\"contrib.funsor\", ...)  # TODO"
+    "pyroapi.register_backend(\"contrib.funsor\", dict(\n",
+    "    distributions=\"pyro.distributions\",\n",
+    "    handlers=\"pyro.contrib.funsor.handlers\",\n",
+    "    infer=\"pyro.contrib.funsor.infer\",\n",
+    "    ops=\"torch\",\n",
+    "    optim=\"pyro.optim\",\n",
+    "    pyro=\"pyro.contrib.funsor\",\n",
+    "))"
    ]
   },
   {
@@ -102,15 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 <class 'funsor.terms.Number'>\n",
+      "tensor(2.) <class 'funsor.tensor.Tensor'>\n"
+     ]
+    }
+   ],
    "source": [
     "funsor_one = funsor.to_funsor(float(1))\n",
-    "print(funsor_one)\n",
+    "print(funsor_one, type(funsor_one))\n",
     "\n",
     "funsor_two = funsor.to_funsor(torch.tensor(2.))\n",
-    "print(funsor_two_)"
+    "print(funsor_two, type(funsor_two))"
    ]
   },
   {
@@ -122,15 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 <class 'float'>\n",
+      "tensor(2.) <class 'torch.Tensor'>\n"
+     ]
+    }
+   ],
    "source": [
     "data_one = funsor.to_data(funsor.terms.Number(float(1), 'real'))\n",
-    "print(data_one)\n",
+    "print(data_one, type(data_one))\n",
     "\n",
     "data_two = funsor.to_data(funsor.Tensor(torch.tensor(2.), OrderedDict(), 'real'))\n",
-    "print(data_two)"
+    "print(data_two, type(data_two))"
    ]
   },
   {
@@ -142,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n"
+     ]
+    }
+   ],
    "source": [
     "var_x = funsor.to_funsor(\"x\", output=funsor.reals(2))\n",
     "print(var_x)"
@@ -161,9 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict() reals(3, 1, 2)\n",
+      "OrderedDict([('a', bint(3))]) reals(1, 2)\n",
+      "OrderedDict([('a', bint(3))]) reals(2,)\n",
+      "OrderedDict([('a', bint(3)), ('c', bint(2))]) reals()\n"
+     ]
+    }
+   ],
    "source": [
     "ambiguous_tensor = torch.zeros((3, 1, 2))\n",
     "\n",
@@ -193,9 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('a', bint(3)), ('b', bint(2))]) reals()\n",
+      "torch.Size([3, 2])\n",
+      "torch.Size([3, 1, 2])\n",
+      "torch.Size([2, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "ambiguous_funsor = funsor.Tensor(torch.zeros((3, 2)), OrderedDict(a=funsor.bint(3), b=funsor.bint(2)), 'real')\n",
     "print(ambiguous_funsor.inputs, ambiguous_funsor.output)\n",
@@ -222,9 +267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('x', -1)]) OrderedDict([('x', bint(2))]) torch.Size([2])\n",
+      "OrderedDict([('x', -1), ('y', -2)]) OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([])\n",
+      "OrderedDict([('x', -1), ('y', -2), ('z', -3)]) OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([])\n"
+     ]
+    }
+   ],
    "source": [
     "name_to_dim = OrderedDict()\n",
     "\n",
@@ -236,12 +291,12 @@
     "funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.bint(3), x=funsor.bint(2)), 'real')\n",
     "name_to_dim.update({\"y\": -2})\n",
     "tensor_y = funsor.to_data(funsor_y, name_to_dim=name_to_dim)\n",
-    "print(name_to_dim, funsor_y.inputs, funsor_y.shape)\n",
+    "print(name_to_dim, funsor_y.inputs, tensor_y.shape)\n",
     "\n",
     "funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.bint(2), y=funsor.bint(3)), 'real')\n",
     "name_to_dim.update({\"z\": -3})\n",
     "tensor_z = funsor.to_data(funsor_z, name_to_dim=name_to_dim)\n",
-    "print(name_to_dim, funsor_z.inputs, funsor_z.shape)"
+    "print(name_to_dim, funsor_z.inputs, tensor_z.shape)"
    ]
   },
   {
@@ -253,20 +308,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('x', bint(2))]) torch.Size([2])\n",
+      "OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2])\n",
+      "OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
-    "    px = ...\n",
-    "    funsor_px = pyro.to_funsor(px, output=funsor.reals())\n",
-    "    print(funsor_px.inputs)\n",
-    "    py = ...\n",
-    "    funsor_py = pyro.to_funsor(py, output=funsor.reals())\n",
-    "    print(funsor_py.inputs)\n",
-    "    pz = ...\n",
-    "    funsor_pz = pyro.to_funsor(py, output=funsor.reals())\n",
-    "    print(funsor_pz.inputs)"
+    "    funsor_x = funsor.Tensor(torch.ones((2,)), OrderedDict(x=funsor.bint(2)), 'real')\n",
+    "    tensor_x = pyro.to_data(funsor_x)\n",
+    "    print(funsor_x.inputs, tensor_x.shape)\n",
+    "\n",
+    "    funsor_y = funsor.Tensor(torch.ones((3, 2)), OrderedDict(y=funsor.bint(3), x=funsor.bint(2)), 'real')\n",
+    "    tensor_y = pyro.to_data(funsor_y)\n",
+    "    print(funsor_y.inputs, tensor_y.shape)\n",
+    "\n",
+    "    funsor_z = funsor.Tensor(torch.ones((2, 3)), OrderedDict(z=funsor.bint(2), y=funsor.bint(3)), 'real')\n",
+    "    tensor_z = pyro.to_data(funsor_z)\n",
+    "    print(funsor_z.inputs, tensor_z.shape)"
    ]
   },
   {
@@ -278,15 +345,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('batch', bint(3))]) reals()\n",
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4))]) reals()\n",
+      "<class 'pyro.distributions.torch.Bernoulli'> torch.Size([3])\n",
+      "<class 'funsor.tensor.Tensor'> OrderedDict([('x', bint(4)), ('batch', bint(3))]) reals()\n"
+     ]
+    }
+   ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    probs = funsor.Tensor(torch.tensor([0.5, 0.4, 0.7]), OrderedDict(batch=funsor.bint(3)))\n",
+    "    print(type(probs), probs.inputs, probs.output)\n",
     "    x = funsor.Tensor(torch.tensor([0., 1., 0., 1.]), OrderedDict(x=funsor.bint(4)))\n",
-    "    dx = dist.Bernoulli(probs=pyro.to_data(probs))\n",
-    "    print(type(dx), dx.shape)\n",
+    "    print(type(x), x.inputs, x.output)\n",
+    "    dx = dist.Bernoulli(pyro.to_data(probs))\n",
+    "    print(type(dx), dx.shape())\n",
     "    px = pyro.to_funsor(dx.log_prob(pyro.to_data(x)), output=funsor.reals())\n",
     "    print(type(px), px.inputs, px.output)"
    ]
@@ -306,9 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 torch.Size([2])\n",
+      "1 torch.Size([2, 1])\n",
+      "2 torch.Size([2])\n",
+      "3 torch.Size([2, 1])\n",
+      "4 torch.Size([2])\n",
+      "5 torch.Size([2, 1])\n",
+      "6 torch.Size([2])\n",
+      "7 torch.Size([2, 1])\n",
+      "8 torch.Size([2])\n",
+      "9 torch.Size([2, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    for i in pyro.markov(range(10)):\n",
@@ -332,13 +429,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 torch.Size([2])\n",
+      "1 torch.Size([2, 1])\n",
+      "2 torch.Size([2, 1, 1])\n",
+      "3 torch.Size([2])\n",
+      "4 torch.Size([2, 1])\n",
+      "5 torch.Size([2, 1, 1])\n",
+      "6 torch.Size([2])\n",
+      "7 torch.Size([2, 1])\n",
+      "8 torch.Size([2, 1, 1])\n",
+      "9 torch.Size([2])\n"
+     ]
+    }
+   ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    for i in pyro.markov(range(10), history=2):\n",
-    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i)})))\n",
+    "        x = pyro.to_data(funsor.Tensor(torch.tensor([0., 1.]), OrderedDict({\"x{}\".format(i): funsor.bint(2)})))\n",
     "        print(i, x.shape)"
    ]
   },
@@ -355,15 +469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('n', bint(10))]) torch.Size([10])\n"
+     ]
+    }
+   ],
    "source": [
-    "from pyro.contrib.funsor.runtime import _DIM_STACK, DimTypes\n",
+    "from pyro.contrib.funsor.handlers.runtime import _DIM_STACK, DimType\n",
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    funsor_particle_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.bint(10)))\n",
-    "    tensor_particle_ids = pyro.to_data(funsor_particle_ids, dim_type=DimTypes.GLOBAL)\n",
+    "    tensor_particle_ids = pyro.to_data(funsor_particle_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_particle_ids.inputs, tensor_particle_ids.shape)"
    ]
   },
@@ -376,24 +498,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('plate1', bint(10))]) torch.Size([10])\n",
+      "OrderedDict([('plate2', bint(9))]) torch.Size([9, 1])\n",
+      "OrderedDict([('plate3', bint(10))]) torch.Size([10])\n"
+     ]
+    }
+   ],
    "source": [
+    "from pyro.contrib.funsor.handlers.runtime import _DIM_STACK, DimType\n",
+    "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
     "    \n",
     "    funsor_plate1_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate1=funsor.bint(10)))\n",
-    "    tensor_plate1_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimTypes.GLOBAL)\n",
+    "    tensor_plate1_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_plate1_ids.inputs, tensor_plate1_ids.shape)\n",
     "    \n",
     "    funsor_plate2_ids = funsor.Tensor(torch.arange(9), OrderedDict(plate2=funsor.bint(9)))\n",
-    "    tensor_plate2_ids = pyro.to_data(funsor_plate2_ids, dim_type=DimTypes.GLOBAL)\n",
+    "    tensor_plate2_ids = pyro.to_data(funsor_plate2_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_plate2_ids.inputs, tensor_plate2_ids.shape)\n",
     "    \n",
     "    _DIM_STACK.global_frame.free(\"plate1\", -1)\n",
     "    \n",
     "    funsor_plate3_ids = funsor.Tensor(torch.arange(10), OrderedDict(plate3=funsor.bint(10)))\n",
-    "    tensor_plate3_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimTypes.GLOBAL)\n",
+    "    tensor_plate3_ids = pyro.to_data(funsor_plate1_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_plate3_ids.inputs, tensor_plate3_ids.shape)"
    ]
   },
@@ -415,25 +549,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('k', bint(9))]) torch.Size([9, 1])\n",
+      "OrderedDict([('n', bint(10))]) torch.Size([9, 1])\n",
+      "OrderedDict([('m', bint(11))]) torch.Size([11])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pyro.contrib.funsor.runtime import _DIM_STACK, DimTypes\n",
-    "\n",
     "prev_first_available_dim = _DIM_STACK.set_first_available_dim(-2)\n",
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
-    "    funsor_local_ids = funsor.Tensor(torch.arange(10), OrderedDict(k=funsor.bint(9)))\n",
-    "    tensor_local_ids = pyro.to_data(funsor_local_ids, dim_type=DimTypes.LOCAL)\n",
+    "    funsor_local_ids = funsor.Tensor(torch.arange(9), OrderedDict(k=funsor.bint(9)))\n",
+    "    tensor_local_ids = pyro.to_data(funsor_local_ids, dim_type=DimType.LOCAL)\n",
     "    print(funsor_local_ids.inputs, tensor_local_ids.shape)\n",
     "    \n",
     "    funsor_global_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.bint(10)))\n",
-    "    tensor_global_ids = pyro.to_data(funsor_global_ids, dim_type=DimTypes.GLOBAL)\n",
+    "    tensor_global_ids = pyro.to_data(funsor_global_ids, dim_type=DimType.GLOBAL)\n",
     "    print(funsor_global_ids.inputs, tensor_local_ids.shape)\n",
     "    \n",
-    "    funsor_data_ids = funsor.Tensor(torch.arange(10), OrderedDict(m=funsor.bint(11)))\n",
-    "    tensor_data_ids = pyro.to_data(funsor_data_ids, dim_type=DimTypes.VISIBLE)\n",
+    "    funsor_data_ids = funsor.Tensor(torch.arange(11), OrderedDict(m=funsor.bint(11)))\n",
+    "    tensor_data_ids = pyro.to_data(funsor_data_ids, dim_type=DimType.VISIBLE)\n",
     "    print(funsor_data_ids.inputs, tensor_data_ids.shape)\n",
     "    \n",
     "# we also need to reset the first_available_dim after we're done\n",
