--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +275,8 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('x', -1)]) OrderedDict([('x', bint(2))]) torch.Size([2])\n",
-      "OrderedDict([('x', -1), ('y', -2)]) OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([])\n",
-      "OrderedDict([('x', -1), ('y', -2), ('z', -3)]) OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([])\n"
+      "OrderedDict([('x', -1), ('y', -2)]) OrderedDict([('y', bint(3)), ('x', bint(2))]) torch.Size([3, 2])\n",
+      "OrderedDict([('x', -1), ('y', -2), ('z', -3)]) OrderedDict([('z', bint(2)), ('y', bint(3))]) torch.Size([2, 3, 1])\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +361,16 @@
    ],
    "source": [
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
+    "    \n",
     "    probs = funsor.Tensor(torch.tensor([0.5, 0.4, 0.7]), OrderedDict(batch=funsor.bint(3)))\n",
     "    print(type(probs), probs.inputs, probs.output)\n",
+    "    \n",
     "    x = funsor.Tensor(torch.tensor([0., 1., 0., 1.]), OrderedDict(x=funsor.bint(4)))\n",
     "    print(type(x), x.inputs, x.output)\n",
+    "    \n",
     "    dx = dist.Bernoulli(pyro.to_data(probs))\n",
     "    print(type(dx), dx.shape())\n",
+    "    \n",
     "    px = pyro.to_funsor(dx.log_prob(pyro.to_data(x)), output=funsor.reals())\n",
     "    print(type(px), px.inputs, px.output)"
    ]
@@ -386,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +571,7 @@
        "-1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +580,7 @@
     "prev_first_available_dim = _DIM_STACK.set_first_available_dim(-2)\n",
     "\n",
     "with pyroapi.pyro_backend(\"contrib.funsor\"), handlers.named():\n",
+    "    \n",
     "    funsor_local_ids = funsor.Tensor(torch.arange(9), OrderedDict(k=funsor.bint(9)))\n",
     "    tensor_local_ids = pyro.to_data(funsor_local_ids, dim_type=DimType.LOCAL)\n",
     "    print(funsor_local_ids.inputs, tensor_local_ids.shape)\n",
