--- a/tutorial/source/contrib_funsor_intro_i.ipynb
+++ b/tutorial/source/contrib_funsor_intro_i.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('k', bint(9))]) torch.Size([9, 1])\n",
-      "OrderedDict([('n', bint(10))]) torch.Size([9, 1])\n",
+      "OrderedDict([('n', bint(10))]) torch.Size([10, 1, 1])\n",
       "OrderedDict([('m', bint(11))]) torch.Size([11])\n"
      ]
     },
@@ -571,7 +571,7 @@
        "-1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
     "    \n",
     "    funsor_global_ids = funsor.Tensor(torch.arange(10), OrderedDict(n=funsor.bint(10)))\n",
     "    tensor_global_ids = pyro.to_data(funsor_global_ids, dim_type=DimType.GLOBAL)\n",
-    "    print(funsor_global_ids.inputs, tensor_local_ids.shape)\n",
+    "    print(funsor_global_ids.inputs, tensor_global_ids.shape)\n",
     "    \n",
     "    funsor_data_ids = funsor.Tensor(torch.arange(11), OrderedDict(m=funsor.bint(11)))\n",
     "    tensor_data_ids = pyro.to_data(funsor_data_ids, dim_type=DimType.VISIBLE)\n",
