extra print, explicit kwargs

--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "@pyroapi.pyro_backend(\"contrib.funsor\")\n",
     "def log_z(model, *args):\n",
-    "    with LogJointMessenger() as tr, EnumMessenger(), VectorizeMessenger(20):\n",
+    "    with LogJointMessenger() as tr, EnumMessenger(first_available_dim=-1), VectorizeMessenger(size=10):\n",
     "        model(*args)\n",
     "\n",
     "    with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
@@ -236,13 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "locs torch.Size([10, 3])\n",
       "x0 torch.Size([3, 1])\n",
       "x1 torch.Size([3, 1, 1])\n",
       "x2 torch.Size([3, 1])\n",
@@ -253,9 +254,9 @@
       "x7 torch.Size([3, 1, 1])\n",
       "x8 torch.Size([3, 1])\n",
       "x9 torch.Size([3, 1, 1])\n",
-      "tensor(-333.6899, grad_fn=<SumBackward0>) (tensor([[ 3.1844,  1.0427, -4.2271],\n",
-      "        [ 0.4608,  0.1888, -0.6496],\n",
-      "        [-1.3316, -0.3965,  1.7282]]), tensor([ 7.4881,  5.9110, 17.3450]))\n"
+      "tensor(-175.6081, grad_fn=<SumBackward0>) (tensor([[ 3.4911,  0.7792, -4.2704],\n",
+      "        [ 1.5555,  0.1515, -1.7070],\n",
+      "        [ 0.1272,  0.2921, -0.4193]]), tensor([10.8165, -0.1219, -1.6229]))\n"
      ]
     }
    ],
