--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -208,17 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "@pyroapi.pyro_backend(\"contrib.funsor\")\n",
     "def log_z(model, *args):\n",
-    "    with LogJointMessenger() as tr, EnumMessenger(first_available_dim=-1), VectorizeMessenger(size=10):\n",
+    "    with LogJointMessenger() as tr, \\\n",
+    "            EnumMessenger(first_available_dim=-1), VectorizeMessenger(size=10) as v:\n",
     "        model(*args)\n",
     "\n",
     "    with funsor.interpreter.interpretation(funsor.terms.lazy):\n",
-    "        prod_vars = frozenset({\"_PARTICLES\"})\n",
+    "        prod_vars = frozenset({v.name})\n",
     "        sum_vars = frozenset(tr.log_joint.inputs) - prod_vars\n",
     "        expr = tr.log_joint.reduce(funsor.ops.logaddexp, sum_vars).reduce(funsor.ops.add, prod_vars)\n",
     "\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,9 +255,9 @@
       "x7 torch.Size([3, 1, 1])\n",
       "x8 torch.Size([3, 1])\n",
       "x9 torch.Size([3, 1, 1])\n",
-      "tensor(-175.6081, grad_fn=<SumBackward0>) (tensor([[ 3.4911,  0.7792, -4.2704],\n",
-      "        [ 1.5555,  0.1515, -1.7070],\n",
-      "        [ 0.1272,  0.2921, -0.4193]]), tensor([10.8165, -0.1219, -1.6229]))\n"
+      "tensor(-168.3563, grad_fn=<SumBackward0>) (tensor([[ 6.6364, -4.3153, -2.3211],\n",
+      "        [-0.8893, -0.0196,  0.9089],\n",
+      "        [ 0.5422, -2.5592,  2.0170]]), tensor([10.4256,  5.0803, 13.3189]))\n"
      ]
     }
    ],
