update text in tutorial pt2

--- a/tutorial/source/contrib_funsor_intro_ii.ipynb
+++ b/tutorial/source/contrib_funsor_intro_ii.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "## Vectorizing a model across multiple samples\n",
     "\n",
-    "Next, since our priors over global variables are continuous and cannot be enumerated exactly, we will implement an effect handler that uses a global dimension to draw multiple samples in parallel from the model.\n",
+    "Next, since our priors over global variables are continuous and cannot be enumerated exactly, we will implement an effect handler that uses a global dimension to draw multiple samples in parallel from the model. To highlight the interoperability of `pyro.contrib.funsor` with most of Pyro's other machinery, our implementation will allocate a new `DimType.GLOBAL` particle dimension using `pyro.to_data` as in `EnumMessenger` above, then use Pyro's `BroadcastMessenger` to actually draw multiple samples.\n",
     "\n",
     "Recall that in part 1 we saw that `DimType.GLOBAL` dimensions must be deallocated manually or they will persist until the final effect handler has exited. This low-level detail is taken care of automatically by the `GlobalNameMessenger` handler provided in `pyro.contrib.funsor` as a base class for any effect handlers that allocate global dimensions. Our vectorization effect handler will inherit from this class."
    ]
@@ -176,7 +176,7 @@
    "source": [
     "## Computing an ELBO with variable elimination\n",
     "\n",
-    "Our final effect handler will build up a lazy Funsor expression for the marginal likelihood, the loss function we'll be using to train our approximate posterior over the global variables."
+    "Our final effect handler will build up a lazy Funsor expression for the log of a Monte Carlo estimate of the marginal likelihood, a lower bound on the true log-evidence. We will call `pyro.to_funsor` on both the sample value and the distribution, showing how nearly all inference operations including log-probability density evaluation can be performed on `funsor.Funsor`s directly."
    ]
   },
   {
@@ -203,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the actual loss function:"
+    "And finally the actual loss function, which applies our three effect handlers and evaluates the final lazy expression using Funsor's `optimize` interpretation for variable elimination."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +255,9 @@
       "x7 torch.Size([3, 1, 1])\n",
       "x8 torch.Size([3, 1])\n",
       "x9 torch.Size([3, 1, 1])\n",
-      "tensor(-168.3563, grad_fn=<SumBackward0>) (tensor([[ 6.6364, -4.3153, -2.3211],\n",
-      "        [-0.8893, -0.0196,  0.9089],\n",
-      "        [ 0.5422, -2.5592,  2.0170]]), tensor([10.4256,  5.0803, 13.3189]))\n"
+      "tensor(-175.6081, grad_fn=<SumBackward0>) (tensor([[ 3.4911,  0.7792, -4.2704],\n",
+      "        [ 1.5555,  0.1515, -1.7070],\n",
+      "        [ 0.1272,  0.2921, -0.4193]]), tensor([10.8165, -0.1219, -1.6229]))\n"
      ]
     }
    ],
