--- a/tutorial/source/mle_map.ipynb
+++ b/tutorial/source/mle_map.ipynb
@@ -203,7 +203,7 @@
     "def guide_map(data):\n",
     "    f_map = pyro.param(\"f_map\", torch.tensor(0.5),\n",
     "                       constraint=constraints.positive)\n",
-    "    f = pyro.sample(\"latent_fairness\", dist.Delta(f_map))"
+    "    pyro.sample(\"latent_fairness\", dist.Delta(f_map))"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To understand what's going on note that the prior mean of the `latent_fairness` in our model is 0.5, since that is the mean of `Beta(10.0, 10.0)`. The MLE estimate (which ignores the prior) gives us a result that is entirely determined by the raw counts (6 heads and 4 tails, say). In contrast the MAP estimate is regularized towards the prior mean, which is why the MAP estimate is somewhere between 0.5 aned 0.6."
+    "To understand what's going on note that the prior mean of the `latent_fairness` in our model is 0.5, since that is the mean of `Beta(10.0, 10.0)`. The MLE estimate (which ignores the prior) gives us a result that is entirely determined by the raw counts (6 heads and 4 tails, say). In contrast the MAP estimate is regularized towards the prior mean, which is why the MAP estimate is somewhere between 0.5 and 0.6."
    ]
   }
  ],
