--- a/tutorial/source/mle_map.ipynb
+++ b/tutorial/source/mle_map.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this short tutorial we review how to do Maximum Likelihood (MLE) and Maximum A Posteriori (MAP) estimation in Pyro."
+    "In this short tutorial we review how to do Maximum Likelihood (MLE) and Maximum a Posteriori (MAP) estimation in Pyro."
    ]
   },
   {
@@ -96,11 +96,11 @@
    "outputs": [],
    "source": [
     "def model_mle(data):\n",
-    "    # note that we need to include the positivity constraint; \n",
+    "    # note that we need to include the interval constraint; \n",
     "    # in original_model() this constraint appears implicitly in \n",
     "    # the support of the Beta distribution.\n",
     "    f = pyro.param(\"latent_fairness\", torch.tensor(0.5), \n",
-    "                   constraint=constraints.positive)\n",
+    "                   constraint=constraints.unit_interval)\n",
     "    with pyro.plate(\"data\", data.size(0)):\n",
     "        pyro.sample(\"obs\", dist.Bernoulli(f), obs=data)"
    ]
@@ -139,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "[iter 0]  loss: 6.9315\n",
-      "[iter 50]  loss: 6.7303\n",
+      "[iter 50]  loss: 6.7310\n",
       "[iter 100]  loss: 6.7301\n"
      ]
     }
@@ -157,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our MLE estimate of the latent fairness is 0.599\n"
+      "Our MLE estimate of the latent fairness is 0.601\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
    "source": [
     "def guide_map(data):\n",
     "    f_map = pyro.param(\"f_map\", torch.tensor(0.5),\n",
-    "                       constraint=constraints.positive)\n",
+    "                       constraint=constraints.unit_interval)\n",
     "    pyro.sample(\"latent_fairness\", dist.Delta(f_map))"
    ]
   },
@@ -223,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "[iter 0]  loss: 5.6719\n",
-      "[iter 50]  loss: 5.6004\n",
+      "[iter 50]  loss: 5.6006\n",
       "[iter 100]  loss: 5.6004\n"
      ]
     }
