Add logging to debug SMC heuristic

--- a/tutorial/source/epidemiology_ii.ipynb
+++ b/tutorial/source/epidemiology_ii.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll pull out the Bay Area counties."
+    "We'll pull out the Bay Area counties with their approximate populations."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "counties = OrderedDict([\n",
-    "    (\"Santa Clara\", 17623000),\n",
+    "    (\"Santa Clara\", 1763000),\n",
     "    (\"Alameda\", 1495000),\n",
     "    (\"Contra Costa\", 1038000),\n",
     "    (\"San Francisco\", 871000),\n",
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need to convert from cumulative to difference data."
+    "We need to convert from cumulative to difference data."
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also clamp to zero to avoid numerical issues due to data corrections. This leads to overestimates of the cumulative counts; a more complex alternative could distribute the negative corrections backwards in time."
+    "We'll clamp to zero to avoid numerical issues due to data corrections. This leads to overestimates of the cumulative counts. A more complex alternative could distribute the negative corrections backwards in time."
    ]
   },
   {
@@ -313,11 +313,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "model.fit(num_samples=200, haar_full_mass=7)"
+    "model.fit(num_samples=200, haar_full_mass=7,\n",
+    "          heuristic_retries=1,\n",
+    "          heuristic_num_particles=1024,\n",
+    "          heuristic_ess_threshold=0.1)"
    ]
   },
   {
